correct broken CSS colour scheme

--- a/styles/base.less
+++ b/styles/base.less
@@ -73,6 +73,14 @@ atom-text-editor .search-results .marker.current-result .region,
     &.function {
       color: @yellow;
     }
+
+    &.css {
+      color: @blue;
+
+      &.property-name {
+        color: @very-light-gray;
+      }
+    }
   }
 }
 
@@ -258,6 +266,10 @@ atom-text-editor .search-results .marker.current-result .region,
 
     &.id {
       color: @blue;
+    }
+
+    &.css {
+      color: @orange;
     }
   }
 }
